Style: Add CSS for Rhythm Task and fix text alignment

--- a/src/css/roar.css
+++ b/src/css/roar.css
@@ -1,11 +1,14 @@
 /* CSS Document */
 
 body {
+	background-color: #f5f5f5;
+	color: #333333; /* dark gray */
 	font-family: 'Noto Sans', sans-serif;
 	width:100%;
 	height: 100vh;
 	display: flex;
 	margin: auto;
+	justify-content: center;
 	text-align: center;
 }
 
@@ -31,6 +34,7 @@ h2 {
 }
 
 h3 {
+	font-size: 2.5rem;;
 	text-align:center;
 	font-family: "Source Sans Pro", Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	font-style: normal;
@@ -40,6 +44,7 @@ h3 {
 }
 
 p  {
+	font-size: 1.2rem;
 	text-align:center;
 	vertical-align: middle;
 	font-family: "Source Sans Pro", Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
@@ -47,6 +52,32 @@ p  {
 	font-weight: normal;
 	font-size: 3vh;
 	color: rgba(0,0,0,1);
+}
+
+/* Instruction box style */
+.instruction-box {
+	background-color: white;
+	padding: 40px;
+	border-radius: 15px;
+	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+	text-align: left;
+	display: inline-block;
+	margin: 20px auto;
+}
+
+.instruction-box p {
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.key-text {
+	font-weight: 800;
+	font-size: 1.4rem;
+	padding: 0px 8px;
+}
+
+.prompt-box {
+	margin-top: 80px;
 }
 
 .consent_form_title{
@@ -214,6 +245,10 @@ p  {
 
 .blue {
 	color: rgba(66,152,181,1);
+}
+
+.red {
+	color: rgba(219,97,69,1);
 }
 
 .yellow {
